Add options menu

--- a/Assets/UI/UI_Options.uxml
+++ b/Assets/UI/UI_Options.uxml
@@ -1,7 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/MainMenuStyleSheet.uss?fileID=7433441132597879392&amp;guid=8c1f7f68c16a4e6479e8d061f7592bfb&amp;type=3#MainMenuStyleSheet" />
     <ui:VisualElement style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 20%; align-self: center; justify-content: center;">
-        <ui:Button text="New Game" display-tooltip-when-elided="true" name="button_new_game" class="button" />
-        <ui:Button text="Options" display-tooltip-when-elided="true" name="button_options" class="button" />
+        <ui:Button text="Timer: ON" display-tooltip-when-elided="true" name="button_timer" class="button" />
+        <ui:Button text="Type: Multiplication" display-tooltip-when-elided="true" name="button_type" class="button" />
+        <ui:Button text="OK" display-tooltip-when-elided="true" name="button_ok" class="button" style="background-color: rgb(74, 87, 237);" />
     </ui:VisualElement>
 </ui:UXML>
